[gd_scene load_steps=9 format=3 uid="uid://6g564mdrygiq"]

[ext_resource type="PackedScene" path="res://scenes/game_objects/bullet/bullet_spawner.tscn" id="1_xadxg"]
[ext_resource type="Script" path="res://scenes/game_objects/non_player/ufo/ufo.gd" id="1_y1rqu"]
[ext_resource type="PackedScene" uid="uid://0vcte5dcai77" path="res://scenes/component/collision_component.tscn" id="2_furi8"]
[ext_resource type="PackedScene" path="res://scenes/game_objects/effects/blink_effect.tscn" id="3_r5go8"]
[ext_resource type="PackedScene" uid="uid://120swbisqhkp" path="res://scenes/main/screen_wrap.tscn" id="3_xmaw7"]
[ext_resource type="PackedScene" uid="uid://tpcygdc21vya" path="res://scenes/manager/explosion_manager.tscn" id="4_begwp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0xipc"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_005d6"]
radius = 30.0167

[node name="UFO" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_y1rqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_0xipc")
metadata/_edit_lock_ = true

[node name="Body" type="Node2D" parent="."]

[node name="Top" type="Line2D" parent="Body"]
position = Vector2(0, -5)
points = PackedVector2Array(-17, 1, -12, -9, -5, -16, 5, -16, 12, -9, 17, 1)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Middle" type="Line2D" parent="Body"]
position = Vector2(0, -2)
points = PackedVector2Array(-33, 8, -20, -2, 20, -2, 33, 8)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Bottom" type="Line2D" parent="Body"]
position = Vector2(0, 6)
points = PackedVector2Array(33, 0, -33, 0, -20, 12, 20, 12, 33, 0)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BulletSpawner" parent="." instance=ExtResource("1_xadxg")]
collision_layer = 4
shoot_time = 1.1

[node name="BlinkEffect" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_r5go8")]
target = NodePath("..")

[node name="CollisionComponent" parent="." instance=ExtResource("2_furi8")]
collision_layer = 4
collision_mask = 3
invincibility_time = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionComponent"]
shape = SubResource("CircleShape2D_005d6")

[node name="ScreenWrap" parent="." instance=ExtResource("3_xmaw7")]
wrap_radius = 35

[node name="ExplosionManager" parent="." node_paths=PackedStringArray("collision_component") instance=ExtResource("4_begwp")]
collision_component = NodePath("../CollisionComponent")
explosion_scale = 1.3

[node name="YChangeTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true
